grammars/noir/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_definition,
        $.impl_block,
        $.trait_definition,
        $.type_alias,
        $.module_declaration,
        $.use_declaration,
        $.global_declaration
      ),

    // Attributes
    attribute: ($) =>
      seq(
        "#",
        "[",
        $.attribute_item,
        repeat(seq(",", $.attribute_item)),
        optional(","),
        "]"
      ),

    attribute_item: ($) =>
      seq(
        $.identifier,
        optional(seq("(", optional($.attribute_arguments), ")"))
      ),

    function_definition: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        optional("unconstrained"),
        optional("comptime"),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameters,
        optional(seq("->", field("return_type", $._type))),
        optional($.where_clause),
        $.block
      ),

    parameters: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)), optional(","))), ")"),

    parameter: ($) =>
      choice(
        $.self_parameter,
        seq($.pattern, optional(seq(":", optional($.visibility_modifier), $._type)))
      ),

    type_alias: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        "type",
        field("name", $.type_identifier),
        optional($.type_parameters),
        "=",
        field("type", $._type),
        ";"
      ),

    // Module declaration
    global_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        optional("comptime"),
        "global",
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        ";"
      ),

    // Type parameters
    _type: ($) =>
      choice(
        $.primitive_type,
        $.type_identifier,
        $.generic_type,
        $.scoped_type_identifier,
        $.reference_type,
        $.mutable_reference_type,
        $.array_type,
        $.slice_type,
        $.tuple_type,
        $.function_type,
        $.unit_type,
        $.parenthesized_type
      ),

    primitive_type: (_) =>
      choice(
        "Field",
        "bool",
        "u1",
        "u8",
        "u16",
        "u32",
        "u64",
        "u128",
        "i8",
        "i16",
        "i32",
        "i64",
        "i128",
        "str",
        "fmtstr"
      ),

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    generic_type: ($) =>
      seq(
        choice($.type_identifier, $.scoped_type_identifier),
        $.type_arguments
      ),

    type_arguments: ($) =>
      seq("<", $._type_argument, repeat(seq(",", $._type_argument)), optional(","), ">"),

    _type_argument: ($) =>
      choice($._type, $._expression),

    reference_type: ($) => seq("&", $._type),

    mutable_reference_type: ($) => seq("&", "mut", $._type),

    array_type: ($) =>
      seq("[", field("element", $._type), ";", field("length", $._expression), "]"),

    slice_type: ($) => seq("[", $._type, "]"),

    tuple_type: ($) =>
      seq("(", $._type, repeat1(seq(",", $._type)), optional(","), ")"),

    function_type: ($) =>
      seq(
        "fn",
        "(",
        optional(seq($._type, repeat(seq(",", $._type)), optional(","))),
        ")",
        optional(seq("->", $._type))
      ),

    unit_type: (_) => seq("(", ")"),

    pattern: ($) =>
      choice(
        $.identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.wildcard_pattern,
        $.mut_pattern,
        $.reference_pattern
      ),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.expression_statement,
        $.for_statement,
        $.loop_statement,
        $.while_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.assert_statement,
        $.constrain_statement,
        $.if_expression,
        $.match_expression,
        $._item
      ),

    let_statement: ($) =>
      seq(
        optional("comptime"),
        "let",
        optional("mut"),
        field("pattern", $.pattern),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        ";"
      ),

    expression_statement: ($) => seq($._expression, ";"),

    assert_statement: ($) =>
      seq(
        choice("assert", "assert_eq"),
        "(",
        $._expression,
        repeat(seq(",", $._expression)),
        optional(","),
        ")",
        ";"
      ),

    constrain_statement: ($) =>
      seq("constrain", $._expression, ";"),

    // Expressions
    _expression: ($) =>
      choice(
        $.identifier,
        $.scoped_identifier,
        $.self_expression,
        $._literal,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.array_expression,
        $.tuple_expression,
        $.struct_expression,
        $.if_expression,
        $.match_expression,
        $.closure_expression,
        $.block,
        $.parenthesized_expression,
        $.cast_expression,
        $.reference_expression,
        $.dereference_expression,
        $.range_expression,
        $.unit_expression,
        $.generic_function,
        $.comptime_expression,
        $.unsafe_expression,
        $.quote_expression
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F_]+/,
          /0b[01_]+/,
          /0o[0-7_]+/,
          /[0-9][0-9_]*/
        )
      ),

    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($.escape_sequence, /[^"\\]+/)),
        '"'
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["+", PREC.additive],
          ["-", PREC.additive],
          ["*", PREC.multiplicative],
          ["/", PREC.multiplicative],
          ["%", PREC.multiplicative],
          ["==", PREC.comparative],
          ["!=", PREC.comparative],
          ["<", PREC.comparative],
          [">", PREC.comparative],
          ["<=", PREC.comparative],
          [">=", PREC.comparative],
          ["&&", PREC.and],
          ["||", PREC.or],
          ["&", PREC.bitand],
          ["|", PREC.bitor],
          ["^", PREC.bitxor],
          ["<<", PREC.shift],
          [">>", PREC.shift],
          ["=", PREC.assign],
          ["+=", PREC.assign],
          ["-=", PREC.assign],
          ["*=", PREC.assign],
          ["/=", PREC.assign],
          ["%=", PREC.assign],
          ["&=", PREC.assign],
          ["|=", PREC.assign],
          ["^=", PREC.assign],
          ["<<=", PREC.assign],
          [">>=", PREC.assign],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression)
            )
          )
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression),
          "(",
          optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))),
          ")"
        )
      ),

    comptime_expression: ($) =>
      seq("comptime", $.block),

    unsafe_expression: ($) =>
      seq("unsafe", $.block),

    quote_expression: ($) =>
      seq("quote", $.block),

    // Comments
